--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,67 @@
-@import 'tailwindcss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+/* base */
+h1 {
+    @apply text-4xl mb-3
 }
+/* base */
+
+/* tabla basica */
+table {
+    @apply table-auto w-full
+}
+.table th {
+    @apply px-6 py-4 bg-gray-50 font-medium text-gray-500 uppercase border leading-4 tracking-widest
+}
+
+.table tr {
+    @apply border
+}
+
+.table td {
+    @apply px-6 py-4 whitespace-normal
+}
+/* tabla basica */
+
+
+/* formulario */
+.form-control {
+    @apply block rounded-sm shadow-sm bg-purple-50 w-full
+}
+
+.label {
+    @apply mt-2 block
+}
+/* formulario */
+
+/* botones */
+.btn {
+    @apply border rounded px-3 py-2 text-white font-bold inline-block transition-all
+}
+
+.btn-danger {
+    @apply bg-red-600 hover:bg-red-800 border-red-600
+}
+.btn-success {
+    @apply bg-green-600 hover:bg-green-800 border-green-600
+}
+.btn-primary {
+    @apply bg-blue-600 hover:bg-blue-800 border-blue-600
+}
+.btn-warning {
+    @apply bg-yellow-600 hover:bg-yellow-800 border-yellow-600
+}
+/* botones */
+
+/* cartas */
+.card {
+    @apply p-6 rounded shadow-sm
+}
+
+.card-white {
+    @apply bg-white
+}
+/* cartas */
